implemented Home Screen

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,10 @@
 
         <activity
             android:name=".activity.MainActivity"
+            android:exported="false" />
+
+        <activity
+            android:name=".activity.HomeScreenActivity"
             android:exported="true"
             android:screenOrientation="fullSensor">
             <intent-filter>
