--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -15,6 +15,8 @@ roomRuntime = "2.6.1"
 roundedimageviewVersion = "2.3.0"
 rxandroid = "2.0.1"
 rxjava = "2.2.10"
+sdpAndroid = "1.1.1"
+sspAndroid = "1.1.1"
 
 
 [libraries]
@@ -34,6 +36,8 @@ mlkit-bom = { module = "com.google.mlkit:mlkit-bom", version.ref = "mlkitBom" }
 roundedimageview = { module = "com.makeramen:roundedimageview", version.ref = "roundedimageviewVersion" }
 rxandroid = { module = "io.reactivex.rxjava2:rxandroid", version.ref = "rxandroid" }
 rxjava = { module = "io.reactivex.rxjava2:rxjava", version.ref = "rxjava" }
+ssp-android = { module = "com.intuit.ssp:ssp-android", version.ref = "sspAndroid" }
+sdp-android = { module = "com.intuit.sdp:sdp-android", version.ref = "sdpAndroid" }
 
 
 [plugins]
