--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -122,6 +122,11 @@
         </activity>
 
         <activity
+            android:name=".activity.AboutActivity"
+            android:windowSoftInputMode="adjustResize">
+        </activity>
+
+        <activity
             android:name=".activity.SplashActivity"
             android:windowSoftInputMode="adjustResize"
             android:exported="true" >
