Implemented Prepare shipment Design.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -55,7 +55,7 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
-            android:name=".activity.OrderSearchActivity"
+            android:name=".activity.PrepareShipment1Activity"
             android:exported="true">
           <!--  <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
