--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -70,6 +70,9 @@
             android:name=".activity.OrderDetailActivity"
             android:exported="false" />
         <activity
+            android:name=".activity.ShipmentListActivity"
+            android:exported="false" />
+        <activity
             android:name=".activity.PrepareShipmentActivity"
             android:exported="false" />
         <activity
